--- a/enviroment.yml
+++ b/enviroment.yml
@@ -1,19 +1,22 @@
 name: ruonia-forecast
 channels:
   - conda-forge
+  - defaults         
 dependencies:
-  - python=3.11
-  - pandas>=2.1
-  - polars
-  - requests
-  - pyarrow
-  - openpyxl      
-  - xlrd           
+  # --- runtime ---
+  - python>=3.10
+  - pandas>=2.2
+  - pyarrow>=15.0
+  - requests>=2.31
+  - urllib3>=2.2
+  - python-holidays>=0.25
+  - openpyxl>=3.1
+  - lxml>=5.1
+  # --- notebooks / viz ---
   - jupyterlab
-  - scipy
-  - pandas_market_calendars
+  - ipykernel
+  # --- optional CLI helpers ---
   - tqdm
-  - pre-commit
-  - lxml
-  - nasdaq-data-link
-  - arch-py  
+  # --- pip section (пустая, если всё ставим conda-пакетами) ---
+  - pip:
+      []
