--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ requests>=2.31
 urllib3>=2.2          # retry‐strategy utils
 python-holidays>=0.25
 openpyxl>=3.1         # чтение XLSX из ROISfix
-lxml>=5.1            
+lxml>=5.1
+importlib-metadata>=7.1.0
+pysindy            
